--- a/mobibuses.servicios/pom.xml
+++ b/mobibuses.servicios/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>co.edu.uniandes.csw.mobibuses.interfaz</groupId>
-    <artifactId>mobibuses.interfaz</artifactId>
+    <groupId>co.edu.uniandes.csw.mobibuses</groupId>
+    <artifactId>mobibuses.servicios</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>mobibuses.interfaz</name>
+    <name>mobibuses.servicios</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -15,6 +15,16 @@
     </properties>
 
     <dependencies>
+        <dependency> 
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>jsr311-api</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>mobibuses.backend</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
