--- a/mobibuses.backend/pom.xml
+++ b/mobibuses.backend/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>jersey-servlet</artifactId>
             <version>1.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derbyclient</artifactId>
+            <version>10.10.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
